fix: fixin problems with creation of medical examinations